--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -60,7 +60,7 @@ body {
     top: 0;
     left: 0;
     height: 100vh;
-    background-image: url('cropped-rsz_victor-xok-787718-unsplash.jpg');
+    background-image: url('../images/sec-1.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-position: center 50px;
