--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -140,6 +140,7 @@ body {
     width: 350px;
     padding: 20px 22px 10px 22px;
     margin: 15px;
+    margin-bottom: 40px;
     border: 0;
     -webkit-box-shadow: 0px 9px 31px -2px rgba(0, 0, 0, 0.20);
     -moz-box-shadow: 0px 9px 31px -2px rgba(0, 0, 0, 0.20);
@@ -151,11 +152,39 @@ body {
 }
 
 #sec-2 .card i {
+    position: absolute;
+    left: 40%;
+    top: -30px;
+    height: 70px;
+    border-radius: 50%;
+    width: 70px;
+    background-color: #dc3545;
     font-size: 40px;
     margin-bottom: 20px;
 }
 
+#sec-2 .card i::before {
+    position: absolute;
+    color: white;
+}
+
+#sec-2 .card .fa-studiovinari::before {
+    left: 13px;
+    top: 14px;
+}
+
+#sec-2 .card .fa-walking::before {
+    left: 22px;
+    top: 14px;
+}
+
+#sec-2 .card .fa-skull-crossbones::before {
+    left: 18px;
+    top: 12px;
+}
+
 #sec-2 .card h3 {
+    margin-top: 30px;
     font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     font-weight: 400;
@@ -179,6 +208,8 @@ body {
 #sec-2 .card .card-footer {
     background: white;
     padding-bottom: 5px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 #sec-2 .card .card-footer a {
