--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -183,12 +183,28 @@ body {
     top: 12px;
 }
 
+#sec-2 .card .fa-user-secret::before {
+    top: 12px;
+    left: 18px;
+}
+
+#sec-2 .card .fa-book-dead::before {
+    top: 13px;
+    left: 17px;
+}
+
+#sec-2 .card .fa-dragon::before {
+    top: 12px;
+    left: 10px;
+}
+
 #sec-2 .card h3 {
-    margin-top: 30px;
     font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     font-weight: 400;
+    letter-spacing: 1px;
     margin-bottom: 14px;
+    margin-top: 45px;
 }
 
 #sec-2 .card p {
@@ -197,11 +213,12 @@ body {
     font-weight: 400;
     line-height: 1.4;
     color: #555555;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
 #sec-2 .card img {
     width: 100%;
+    height: 190px;
     margin-bottom: 20px;
 }
 
