--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -20,6 +20,10 @@ body {
 }
 
 .navbar-brand:hover {
+    -webkit-animation: rotating 2s linear infinite;
+    -moz-animation: rotating 2s linear infinite;
+    -ms-animation: rotating 2s linear infinite;
+    -o-animation: rotating 2s linear infinite;
     animation: rotating 2s linear infinite;
 }
 
@@ -236,6 +240,23 @@ body {
 @media screen and (max-width: 1000px) {
     .container {
         max-width: 760px;
+    }
+}
+
+@keyframes rotating {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
