--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -144,11 +144,20 @@ body {
     width: 350px;
     padding: 20px 22px 10px 22px;
     margin: 15px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     border: 0;
+    cursor: pointer;
+    -webkit-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
+    -moz-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
+    transition: all 250ms cubic-bezier(.25,.51,.46,1.05);;
+}
+
+#sec-2 .card:hover {
     -webkit-box-shadow: 0px 9px 31px -2px rgba(0, 0, 0, 0.20);
     -moz-box-shadow: 0px 9px 31px -2px rgba(0, 0, 0, 0.20);
-    box-shadow: 0px 12px 31px -2px rgba(0, 0, 0, 0.20);
+    box-shadow: 0px 40px 40px -2px rgba(0, 0, 0, 0.20);
+    transform: translate(0, -20px);
 }
 
 #sec-2 .card-body {
