--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -479,7 +479,7 @@ body {
     z-index: 999;
 }
 
-.slide-trips .back-overplay:hover{
+.slide-trips .back-overplay:hover {
     opacity: 1;
 }
 
@@ -489,7 +489,43 @@ body {
     right: 12px;
 }
 
+ #stats {
+    position: relative;
+    height: 100vh;
+    min-height: 75vh !important;
+    background: rgb(250, 250, 250);
+    text-align: center;
+}
 
+
+#stats header{
+    padding-top: 30px;
+}
+
+#stats canvas {
+    margin: 20px 15px;
+} 
+
+#stats .container-flex{
+    margin: 0 auto;
+    width: 96%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 100px;
+}
+
+
+#stats .canvas-cont{
+    position: relative;
+    width: 44%;
+    /* margin: 10px; */
+    /* border: 1px solid green; */
+}
+
+#stats .wrapper {
+    width: 50%
+}
 
 
 @media screen and (max-width: 1000px) {
