--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -502,11 +502,10 @@ body {
     padding-top: 30px;
 }
 
-#stats canvas {
-    margin: 20px 15px;
-} 
+
 
 #stats .container-flex{
+    color: white;
     margin: 0 auto;
     width: 96%;
     display: flex;
@@ -524,8 +523,14 @@ body {
 }
 
 #stats .wrapper {
-    width: 50%
+    width: 100%;
+    /* height: 200px; */
+    /* background: rgb(66, 72, 235); */
 }
+
+/* #stats canvas {
+    max-width: 400px !important;
+} */
 
 
 @media screen and (max-width: 1000px) {
