--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -489,7 +489,7 @@ body {
     right: 12px;
 }
 
- #stats {
+#stats {
     position: relative;
     height: 100vh;
     min-height: 75vh !important;
@@ -497,14 +497,23 @@ body {
     text-align: center;
 }
 
-
-#stats header{
-    padding-top: 30px;
+#stats header {
+    padding-top: 60px;
 }
 
+#stats header h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 42px;
+}
 
+#stats header p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 22px;
+    color: rgb(119, 119, 119);
+    margin-bottom: 60px;
+}
 
-#stats .container-flex{
+#stats .container-flex {
     color: white;
     margin: 0 auto;
     width: 96%;
@@ -514,24 +523,37 @@ body {
     padding-bottom: 100px;
 }
 
-
-#stats .canvas-cont{
+#stats .canvas-cont {
     position: relative;
-    width: 44%;
-    /* margin: 10px; */
-    /* border: 1px solid green; */
+    width: 48%;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #stats .wrapper {
     width: 100%;
-    /* height: 200px; */
-    /* background: rgb(66, 72, 235); */
+    margin-bottom: 20px;
 }
 
-/* #stats canvas {
-    max-width: 400px !important;
-} */
+#stats h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 35px;
+    margin-bottom: 20px;
+    letter-spacing: 0.7px;
+}
 
+#stats .info {
+    text-align: start;
+    margin: 0 auto;
+    width: 90%;
+}
+
+#stats .info p {
+    /* font-family: 'Open Sans', sans-serif; */
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    line-height: 1.5;
+}
 
 @media screen and (max-width: 1000px) {
     .container {
