--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -115,18 +115,18 @@ body {
     box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, .5);
 }
 
-#sec-2 {
+#trips {
     position: relative;
     background: rgb(250, 250, 250);
     min-height: 100vh !important;
 }
 
-#sec-2 .container {
+#trips .container {
     padding-top: 70px;
     margin-bottom: 70px;
 }
 
-#sec-2 header h2 {
+#trips header h2 {
     font-family: 'Open Sans', sans-serif;
     font-size: 45px;
     font-weight: 400;
@@ -134,14 +134,14 @@ body {
     margin-bottom: 15px;
 }
 
-#sec-2 header p {
+#trips header p {
     font-family: 'Open Sans', sans-serif;
     font-size: 22px;
     color: rgb(119, 119, 119);
     margin-bottom: 60px;
 }
 
-#sec-2 .card {
+#trips .card {
     width: 350px;
     padding: 20px 22px 10px 22px;
     margin: 15px;
@@ -155,18 +155,18 @@ body {
     ;
 }
 
-#sec-2 .card:hover {
+#trips .card:hover {
     -webkit-box-shadow: 0px 9px 31px -2px rgba(0, 0, 0, 0.20);
     -moz-box-shadow: 0px 9px 31px -2px rgba(0, 0, 0, 0.20);
     box-shadow: 0px 40px 40px -2px rgba(0, 0, 0, 0.20);
     transform: translate(0, -20px);
 }
 
-#sec-2 .card-body {
+#trips .card-body {
     padding: 0;
 }
 
-#sec-2 .card i {
+#trips .card i {
     position: absolute;
     left: 40%;
     top: -30px;
@@ -178,42 +178,42 @@ body {
     margin-bottom: 20px;
 }
 
-#sec-2 .card i::before {
+#trips .card i::before {
     position: absolute;
     color: white;
 }
 
-#sec-2 .card .fa-studiovinari::before {
+#trips .card .fa-studiovinari::before {
     left: 13px;
     top: 14px;
 }
 
-#sec-2 .card .fa-walking::before {
+#trips .card .fa-walking::before {
     left: 22px;
     top: 14px;
 }
 
-#sec-2 .card .fa-skull-crossbones::before {
+#trips .card .fa-skull-crossbones::before {
     left: 18px;
     top: 12px;
 }
 
-#sec-2 .card .fa-user-secret::before {
+#trips .card .fa-user-secret::before {
     top: 12px;
     left: 18px;
 }
 
-#sec-2 .card .fa-book-dead::before {
+#trips .card .fa-book-dead::before {
     top: 13px;
     left: 17px;
 }
 
-#sec-2 .card .fa-dragon::before {
+#trips .card .fa-dragon::before {
     top: 12px;
     left: 10px;
 }
 
-#sec-2 .card h3 {
+#trips .card h3 {
     font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     font-weight: 400;
@@ -222,7 +222,7 @@ body {
     margin-top: 45px;
 }
 
-#sec-2 .card p {
+#trips .card p {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     font-weight: 400;
@@ -231,20 +231,20 @@ body {
     margin-bottom: 25px;
 }
 
-#sec-2 .card img {
+#trips .card img {
     width: 100%;
     height: 190px;
     margin-bottom: 20px;
 }
 
-#sec-2 .card .card-footer {
+#trips .card .card-footer {
     background: white;
     padding-bottom: 5px;
     padding-left: 0;
     padding-right: 0;
 }
 
-#sec-2 .card .card-footer a {
+#trips .card .card-footer a {
     float: right;
 }
 
@@ -253,59 +253,59 @@ body {
     min-height: 100vh !important;
 }
 
-.calendar {
+#calendar .calendar {
     display: flex;
     justify-content: center;
 }
 
-.calendar-info {
+#calendar .calendar-info {
     margin: 25px;
 }
 
-.calendar-info .flatpickr-calendar {
+#calendar .calendar-info .flatpickr-calendar {
     width: 250px;
     border: 0;
 }
 
-.calendar-info .flatpickr-days {
+#calendar .calendar-info .flatpickr-days {
     width: 250px;
     height: 250px;
     border: 0;
 }
 
-.flatpickr-day {
+#calendar .flatpickr-day {
     height: 35.7px;
     line-height: 34px;
 }
 
-.calendar-info .dayContainer {
+#calendar .calendar-info .dayContainer {
     min-width: 200px !important;
     width: 250px;
     height: 250px;
 }
 
-.calendar-info .flatpickr-innerContainer {
+#calendar .calendar-info .flatpickr-innerContainer {
     border: 0;
 }
 
-.calendar-info .flatpickr-rContainer {
+#calendar .calendar-info .flatpickr-rContainer {
     width: 250px;
     height: 274px;
 }
 
-.calendar .btn {
+#calendar .calendar .btn {
     margin-top: 30px;
     margin-left: 80px;
 }
 
-.calendar-body {
+#calendar .calendar-body {
     display: flex;
     flex-direction: column;
     width: 84%;
     margin-right: 1.5%;
 }
 
-.calendar-nav {
+#calendar .calendar-nav {
     position: relative;
     display: flex;
     flex-direction: row;
@@ -313,29 +313,29 @@ body {
     background-color: #1bbc9b;
 }
 
-.calendar-nav a {
+#calendar .calendar-nav a {
     color: white;
     font-size: 13px;
     top: 13px;
     font-weight: 500;
 }
 
-.calendar-nav i {
+#calendar .calendar-nav i {
     font-size: 13px;
     margin: 0px 4px;
 }
 
-.calendar-nav .next {
+#calendar .calendar-nav .next {
     position: absolute;
     right: 25px;
 }
 
-.calendar-nav .prev {
+#calendar .calendar-nav .prev {
     position: absolute;
     left: 25px;
 }
 
-.calendar-nav .title {
+#calendar .calendar-nav .title {
     font-family: Arial, serif;
     font-size: 20px;
     font-weight: 400;
@@ -345,28 +345,28 @@ body {
     margin: 22px 0;
 }
 
-.calendar-body table, th, tr {
+#calendar .calendar-body table, th, tr {
     border: 1px solid #ddd;
 }
 
-.calendar-body table {
+#calendar .calendar-body table {
     height: 88vh;
 }
 
-.calendar-body thead tr {
+#calendar .calendar-body thead tr {
     text-align: center;
 }
 
-.calendar-body tbody {
+#calendar .calendar-body tbody {
     cursor: pointer;
 }
 
-.calendar-body tbody th {
+#calendar .calendar-body tbody th {
     cursor: pointer;
     height: 16.66%;
 }
 
-.calendar-body th {
+#calendar .calendar-body th {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 13px;
@@ -374,12 +374,12 @@ body {
     width: 14.285%;
 }
 
-.calendar-body th .date {
+#calendar .calendar-body th .date {
     position: absolute;
     top: 0;
 }
 
-.choose-trip {
+#calendar .choose-trip {
     width: 900px;
     height: 650px;
     padding: 20px;
@@ -403,11 +403,11 @@ body {
     z-index: 900;
 }
 
-.choose-trip h3 {
+#calendar .choose-trip h3 {
     margin-bottom: 20px;
 }
 
-.select-aria {
+#calendar .select-aria {
     display: flex;
     max-width: 600px;
     justify-content: center;
@@ -416,7 +416,7 @@ body {
     margin-bottom: 40px;
 }
 
-.select-aria .select-item {
+#calendar .select-aria .select-item {
     color: black;
     text-decoration: none;
     padding: 10px 0;
@@ -427,26 +427,26 @@ body {
     transition: all 0.3s ease-in;
 }
 
-.select-aria .select-item:hover {
+#calendar .select-aria .select-item:hover {
     border-color: white;
     color: white;
     background: #dc3545;
 }
 
-.select-aria .red-color {
+#calendar .select-aria .red-color {
     background: #dc3545;
     border-color: white;
     color: white;
 }
 
-.slide-trips {
+#calendar .slide-trips {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 24px;
 }
 
-.slide-trips .slide {
+#calendar .slide-trips .slide {
     position: relative;
     width: 160px;
     height: 120px;
@@ -456,7 +456,7 @@ body {
     background-size: cover;
 }
 
-.slide-trips i {
+#calendar .slide-trips i {
     color: black;
     background: white;
     height: 40px;
@@ -468,7 +468,7 @@ body {
     border-radius: 50%;
 }
 
-.slide-trips .back-overplay {
+#calendar .slide-trips .back-overplay {
     background: rgba(245, 36, 36, 0.85);
     opacity: 0;
     height: 100%;
@@ -479,11 +479,11 @@ body {
     z-index: 999;
 }
 
-.slide-trips .back-overplay:hover {
+#calendar .slide-trips .back-overplay:hover {
     opacity: 1;
 }
 
-.slide-trips i::before {
+#calendar .slide-trips i::before {
     position: absolute;
     top: 12px;
     right: 12px;
