--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -67,6 +67,10 @@ body {
     padding-right: 20px;
 }
 
+.btn-toolbar button{
+    padding: 5px 18px;
+}
+
 #home {
     position: relative;
     top: 0;
