--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -79,7 +79,7 @@ body {
     background-image: url('../images/sec-1.jpg');
     background-attachment: fixed;
     background-size: cover;
-    background-position: center 50px;
+    /* background-position: center 50px; */
     background-repeat: no-repeat;
 }
 
