--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -67,7 +67,7 @@ body {
     padding-right: 20px;
 }
 
-.btn-toolbar button{
+.btn-toolbar button {
     padding: 5px 18px;
 }
 
@@ -409,6 +409,26 @@ body {
 
 #calendar .choose-trip h3 {
     margin-bottom: 20px;
+}
+
+#calendar .choose-trip i {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    font-size: 40px;
+    /* border: 3px solid #dc3545; */
+    /* border-radius: 50%; */
+    width: 55px;
+    height: 55px;
+    background: white;
+    color: black;
+    cursor: pointer;
+}
+
+#calendar .choose-trip .fa-times::before {
+    position: absolute;
+    top: 6px;
+    left: 15px;
 }
 
 #calendar .select-aria {
