--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -254,7 +254,8 @@ body {
 #calendar {
     position: relative;
     min-height: 100vh !important;
-    margin-top: 70px;
+    padding-top: 70px;
+    padding-bottom: 60px;
 }
 
 #calendar .calendar {
