--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -380,6 +380,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(63, 63, 63, 0.77);
+    transition: opacity 1s linear;
     z-index: 900;
 }
 
