--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -566,6 +566,47 @@ nav .trips-info h3 {
     margin-top: 10px;
 }
 
+#trips-container {
+    position: relative;
+    min-height: 100vh !important;
+    padding: 70px 0 50px 0;
+    /* background: url("../images/back-7.jpg"); */
+    /* background-size: contain; */
+    /* background-position-x: -150px; */
+}
+
+#trips-container::before {
+    content: '';
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: url("../images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+}
+
+#trips-container .trip-item {
+    width: 45%;
+    margin: 20px 20px 20px 20px;
+    background: rgb(255, 255, 255);
+    -webkit-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
+    -moz-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
+    z-index: 999;
+}
+
+#trips-container .trip-item img {
+    display: block;
+    width: 100%;
+}
+
+#trips-container .trip-item .info-container {
+    padding: 20px;
+}
+
 @media screen and (max-width: 1000px) {
     .container {
         max-width: 760px;
