--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -604,8 +604,52 @@ nav .trips-info h3 {
 }
 
 #trips-container .trip-item .info-container {
-    padding: 20px;
+    padding: 40px 30px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
+
+#trips-container .trip-item header {
+    position: relative;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+#trips-container .trip-item header::before {
+    content: '';
+    position: absolute;
+    height: 1px;
+    background: #999999;
+    width: 60%;
+    top: 40%;
+    left: 20%;
+}
+
+#trips-container .trip-item header h4 {
+    font-family: "Poppins", sans-serif;
+    font-size: 12px;
+    letter-spacing: 3.7px;
+    color: #999999;
+    margin-bottom: 18px;
+}
+
+#trips-container .trip-item header h3 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 26px;
+}
+
+#trips-container .trip-item .trip-desription {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    color: #686666;
+    margin-bottom: 30px;
+}
+
+#trips-container .learn-more{
+    margin-left: 50%;
+    transform: translateX(-50%)
+}
+
 
 @media screen and (max-width: 1000px) {
     .container {
