add hover animation on trip item

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -587,11 +587,17 @@ nav .trips-info h3 {
 #trips-container .trip-item {
     width: 45%;
     margin: 20px 20px 20px 20px;
+    cursor: pointer;
     background: rgb(255, 255, 255);
     -webkit-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
     -moz-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
     box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
     z-index: 999;
+    transition: all 0.2s cubic-bezier(.25, .51, .46, 1.05);
+}
+
+#trips-container .trip-item:hover{
+    transform: scale(1.07);
 }
 
 #trips-container .trip-item img {
