change background pic

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -578,7 +578,7 @@ nav .trips-info h3 {
     height: 100vh;
     top: 0;
     left: 0;
-    background: url("../images/background.jpg");
+    background: url("../images/new-google-maps.png");
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 1;
