--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -553,6 +553,11 @@ body {
     line-height: 1.5;
 }
 
+footer {
+    position: relative;
+    z-index: 999;
+}
+
 footer a {
     color: rgb(168, 168, 168) !important;
     margin-left: 3px;
@@ -592,7 +597,7 @@ nav .trips-info h3 {
     -webkit-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
     -moz-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
     box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.10);
-    z-index: 999;
+    z-index: 998;
     transition: all 0.2s cubic-bezier(.25, .51, .46, 1.05);
 }
 
