--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,702 +1,19 @@
-@mixin animation($property) {
-  -webkit-animation: $property;
-  -moz-animation: $property;
-  -ms-animation: $property;
-  -o-animation: $property;
-  animation: $property;
-}
+@import "mixins/browser";
 
-@mixin box-shadow($prop) {
-  -webkit-box-shadow: $prop;
-  -moz-box-shadow: $prop;
-  box-shadow: $prop;
-}
+@import '_body';
 
-body {
-  padding: 0;
-  margin: 0;
-  overflow-x: hidden;
-  position: relative;
-}
+@import '_trips';
+@import '_calendar';
+@import '_navbar';
+@import '_home';
+@import '_stats';
 
-.navbar {
-  @include box-shadow(0px 2px 40px 0px rgba(0, 0, 0, 0.33));
-  z-index: 999;
+@import '_trip-container';
 
-  .navbar-brand {
-    font-family: "Metal Mania", cursive;
-    font-size: 35px;
-    letter-spacing: 3px;
-    line-height: 1.1;
-    padding: 0;
-    margin-right: 30px;
 
-    &:hover {
-      @include animation(rotating 2s linear infinite);
-    }
+@import '_overplay';
+@import '_footer';
 
-    img {
-      height: 35px;
-      width: 25px;
-      margin-top: -4px;
-    }
-  }
+@import '_media';
 
-  .nav-item {
-    margin-left: 5px;
-  }
-
-  .nav-link {
-    font-family: "Open Sans", sans-serif;
-    font-size: 17px;
-    letter-spacing: 0.8px;
-    padding-right: 20px;
-  }
-
-  .btn-toolbar button {
-    padding: 5px 18px;
-  }
-}
-
-#home {
-  position: relative;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  background-image: url("../images/sec-1.jpg");
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center 50px;
-  background-repeat: no-repeat;
-
-  .info {
-    font-family: "Open Sans", sans-serif;
-    text-align: center;
-    margin-top: 23%;
-
-    h2 {
-      font-size: 42px;
-      font-weight: 400;
-      letter-spacing: 1.6px;
-      color: white;
-      margin-bottom: 30px;
-    }
-
-    p {
-      letter-spacing: 1px;
-      color: rgb(226, 226, 226);
-      margin-bottom: 40px;
-    }
-
-    a {
-      font-size: 20px;
-      color: white;
-      background: rgb(68, 112, 68);
-      padding-left: 24px;
-      padding-right: 24px;
-
-      &:hover {
-        background: rgb(99, 172, 99);
-      }
-
-      &:focus {
-        box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
-      }
-    }
-  }
-}
-
-#trips {
-  position: relative;
-  background: rgb(250, 250, 250);
-  min-height: 100vh !important;
-  padding-top: 70px;
-
-  header {
-    h2 {
-      font-family: "Open Sans", sans-serif;
-      font-size: 45px;
-      font-weight: 400;
-      letter-spacing: 1.4px;
-      margin-bottom: 15px;
-    }
-
-    p {
-      font-family: "Open Sans", sans-serif;
-      font-size: 22px;
-      color: rgb(119, 119, 119);
-      margin-bottom: 60px;
-    }
-  }
-
-  .card {
-    width: 350px;
-    padding: 20px 22px 10px 22px;
-    margin: 15px;
-    margin-bottom: 60px;
-    border: 0;
-    cursor: pointer;
-    @include box-shadow(0px 20px 20px rgba(0, 0, 0, 0.1));
-    transition: all 250ms cubic-bezier(0.25, 0.51, 0.46, 1.05);
-
-    &:hover {
-      @include box-shadow(0px 40px 40px -2px rgba(0, 0, 0, 0.2));
-      transform: translate(0, -20px);
-    }
-
-    h3 {
-      font-family: "Open Sans", sans-serif;
-      font-size: 25px;
-      font-weight: 400;
-      letter-spacing: 1px;
-      margin-bottom: 14px;
-      margin-top: 45px;
-    }
-    p {
-      font-family: "Open Sans", sans-serif;
-      font-size: 15px;
-      font-weight: 400;
-      line-height: 1.4;
-      color: #555555;
-      margin-bottom: 25px;
-    }
-
-    img {
-      width: 100%;
-      height: 190px;
-      margin-bottom: 20px;
-    }
-    .card-footer {
-      background: white;
-      padding-bottom: 5px;
-      padding-left: 0;
-      padding-right: 0;
-
-      a {
-        float: right;
-      }
-    }
-
-    .card-body {
-      padding: 0;
-    }
-
-    i {
-      position: absolute;
-      left: 40%;
-      top: -30px;
-      height: 70px;
-      border-radius: 50%;
-      width: 70px;
-      background-color: #dc3545;
-      font-size: 40px;
-      margin-bottom: 20px;
-
-      &::before {
-        position: absolute;
-        color: white;
-      }
-    }
-
-    .fa-studiovinari::before {
-      left: 13px;
-      top: 14px;
-    }
-
-    .fa-walking::before {
-      left: 22px;
-      top: 14px;
-    }
-
-    .fa-skull-crossbones::before {
-      left: 18px;
-      top: 12px;
-    }
-
-    .fa-user-secret::before {
-      top: 12px;
-      left: 18px;
-    }
-
-    .fa-book-dead::before {
-      top: 13px;
-      left: 17px;
-    }
-
-    .fa-dragon::before {
-      top: 12px;
-      left: 10px;
-    }
-  }
-}
-
-#calendar {
-  position: relative;
-  min-height: 100vh !important;
-  padding-top: 70px;
-  padding-bottom: 60px;
-
-  .calendar {
-    display: flex;
-    justify-content: center;
-
-    .btn {
-      margin-top: 30px;
-      margin-left: 80px;
-    }
-  }
-
-  .calendar-info {
-    margin: 25px;
-
-    .flatpickr-calendar {
-      width: 250px;
-      border: 0;
-    }
-
-    .flatpickr-days {
-      width: 250px;
-      height: 250px;
-      border: 0;
-    }
-
-    .dayContainer {
-      min-width: 200px !important;
-      width: 250px;
-      height: 250px;
-    }
-
-    .flatpickr-innerContainer {
-      border: 0;
-    }
-
-    .flatpickr-rContainer {
-      width: 250px;
-      height: 274px;
-    }
-  }
-  .calendar-body {
-    display: flex;
-    flex-direction: column;
-    width: 84%;
-    margin-right: 1.5%;
-
-    table,
-    th,
-    tr {
-      border: 1px solid #ddd;
-    }
-
-    table {
-      height: 88vh;
-    }
-
-    thead tr {
-      text-align: center;
-    }
-
-    tbody {
-      cursor: pointer;
-    }
-
-    tbody th {
-      cursor: pointer;
-      height: 16.66%;
-    }
-
-    th {
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: 400;
-      font-size: 13px;
-      position: relative;
-      width: 14.285%;
-
-      .date {
-        position: absolute;
-        top: 0;
-      }
-    }
-  }
-
-  .calendar-nav {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background-color: #1bbc9b;
-
-    a {
-      color: white;
-      font-size: 13px;
-      top: 13px;
-      font-weight: 500;
-    }
-
-    i {
-      font-size: 13px;
-      margin: 0px 4px;
-    }
-
-    .next {
-      position: absolute;
-      right: 25px;
-    }
-
-    .prev {
-      position: absolute;
-      left: 25px;
-    }
-
-    .title {
-      font-family: Arial, serif;
-      font-size: 20px;
-      font-weight: 400;
-      letter-spacing: 0.5px;
-      color: white;
-      line-height: 0;
-      margin: 22px 0;
-    }
-  }
-
-  .choose-trip {
-    width: 900px;
-    height: 650px;
-    padding: 20px;
-    text-align: center;
-    visibility: hidden;
-    position: fixed;
-    top: 45%;
-    left: 50%;
-    margin: -260px 0 0 -450px;
-    background: white;
-    z-index: 999;
-
-    h3 {
-      margin-bottom: 20px;
-    }
-
-    .fa-times {
-      position: absolute;
-      right: 0px;
-      top: 0px;
-      font-size: 40px;
-      width: 55px;
-      height: 55px;
-      background: white;
-      color: black;
-      cursor: pointer;
-
-      &::before {
-        position: absolute;
-        top: 6px;
-        left: 15px;
-      }
-    }
-  }
-  .select-aria {
-    display: flex;
-    max-width: 600px;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-left: 130px;
-    margin-bottom: 40px;
-
-    .select-item {
-      color: black;
-      text-decoration: none;
-      padding: 10px 0;
-      width: 150px;
-      margin: 10px;
-      border: 1px solid black;
-      border-radius: 7px;
-      transition: all 0.3s ease-in;
-
-      &:hover {
-        border-color: white;
-        color: white;
-        background: #dc3545;
-      }
-    }
-
-    .red-color {
-      background: #dc3545;
-      border-color: white;
-      color: white;
-    }
-  }
-  .slide-trips {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 24px;
-
-    .slide {
-      position: relative;
-      width: 160px;
-      height: 120px;
-      margin: 8px 6px;
-      background: url("../images/gallery-1.jpg");
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    i {
-      color: black;
-      background: white;
-      height: 40px;
-      width: 40px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin: -20px 0 0 -20px;
-      border-radius: 50%;
-
-      &::before {
-        position: absolute;
-        top: 12px;
-        right: 12px;
-      }
-    }
-
-    .back-overplay {
-      background: rgba(245, 36, 36, 0.85);
-      opacity: 0;
-      height: 100%;
-      width: 100%;
-      left: 0;
-      top: 0;
-      transition: all 0.2s ease;
-      z-index: 999;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
-  }
-}
-
-.overplay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(63, 63, 63, 0.77);
-  transition: opacity 1s linear;
-  z-index: 900;
-}
-
-#stats {
-  position: relative;
-  min-height: 75vh !important;
-  background: rgb(255, 255, 255);
-  text-align: center;
-
-  header {
-    padding-top: 60px;
-
-    h2 {
-      font-family: "Open Sans", sans-serif;
-      font-size: 42px;
-    }
-
-    p {
-      font-family: "Open Sans", sans-serif;
-      font-size: 22px;
-      color: rgb(119, 119, 119);
-      margin-bottom: 60px;
-    }
-  }
-
-  .container-flex {
-    color: white;
-    margin: 0 auto;
-    width: 96%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding-bottom: 100px;
-  }
-
-  .canvas-cont {
-    position: relative;
-    width: 48%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-
-  .wrapper {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  h2 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 35px;
-    margin-bottom: 20px;
-    letter-spacing: 0.7px;
-  }
-  .info {
-    text-align: start;
-    margin: 0 auto;
-    width: 90%;
-
-    p {
-      font-size: 18px;
-      letter-spacing: 0.5px;
-      line-height: 1.5;
-    }
-  }
-}
-
-footer {
-  position: relative;
-  z-index: 999;
-
-  a {
-    color: rgb(168, 168, 168) !important;
-    margin-left: 3px;
-  }
-}
-
-nav .trips-info h3 {
-  color: #ddd;
-  font-size: 17px;
-  letter-spacing: 0.8px;
-  margin-top: 10px;
-}
-
-#trips-container {
-  position: relative;
-  min-height: 100vh !important;
-  padding: 70px 0 50px 0;
-
-  &::before {
-    content: "";
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background: url("../images/new-google-maps.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 1;
-  }
-
-  .trip-item {
-    width: 45%;
-    margin: 20px 20px 20px 20px;
-    cursor: pointer;
-    background: rgb(255, 255, 255);
-    -webkit-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
-    z-index: 998;
-    transition: all 0.2s cubic-bezier(0.25, 0.51, 0.46, 1.05);
-
-    &:hover {
-      transform: scale(1.07);
-    }
-    .trip-desription {
-      font-family: "Open Sans", sans-serif;
-      font-size: 15px;
-      color: #686666;
-      margin-bottom: 30px;
-    }
-    img {
-      display: block;
-      width: 100%;
-    }
-
-    .info-container {
-      padding: 40px 30px;
-      padding-top: 25px;
-      padding-bottom: 25px;
-    }
-
-    header {
-      position: relative;
-      text-align: center;
-      margin-bottom: 30px;
-
-      &::before {
-        content: "";
-        position: absolute;
-        height: 1px;
-        background: #999999;
-        width: 60%;
-        top: 40%;
-        left: 20%;
-      }
-      h4 {
-        font-family: "Poppins", sans-serif;
-        font-size: 12px;
-        letter-spacing: 3.7px;
-        color: #999999;
-        margin-bottom: 18px;
-      }
-      h3 {
-        font-family: "Open Sans", sans-serif;
-        font-size: 26px;
-      }
-    }
-  }
-  .learn-more {
-    margin-left: 50%;
-    transform: translateX(-50%);
-  }
-}
-
-tbody th {
-  p {
-    padding: 0;
-    margin: 0;
-  }
-
-  .fl-left {
-    position: relative;
-    text-align: end;
-
-    i {
-      position: absolute;
-      left: 0;
-      top: 20%; 
-    }
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .container {
-    max-width: 760px;
-  }
-}
-
-@keyframes rotating {
-  from {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes rotating {
-  from {
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
+@import '_keyframes';
