--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -98,37 +98,32 @@ body {
 #calendar {
   position: relative;
   min-height: 100vh !important;
-  padding-top: 70px;
   padding-bottom: 60px; }
-  #calendar .calendar {
+  #calendar .small-calendar {
     display: flex;
     justify-content: center; }
-    #calendar .calendar .btn {
-      margin-top: 30px;
-      margin-left: 80px; }
-  #calendar .calendar-info {
+  #calendar .small-calendar__container {
     margin: 25px; }
-    #calendar .calendar-info .flatpickr-calendar {
+    #calendar .small-calendar__container .flatpickr-calendar {
       width: 250px;
       border: 0; }
-    #calendar .calendar-info .flatpickr-days {
+    #calendar .small-calendar__container .flatpickr-days {
       width: 250px;
       height: 250px;
       border: 0; }
-    #calendar .calendar-info .dayContainer {
+    #calendar .small-calendar__container .dayContainer {
       min-width: 200px !important;
       width: 250px;
       height: 250px; }
-    #calendar .calendar-info .flatpickr-innerContainer {
+    #calendar .small-calendar__container .flatpickr-innerContainer {
       border: 0; }
-    #calendar .calendar-info .flatpickr-rContainer {
+    #calendar .small-calendar__container .flatpickr-rContainer {
       width: 250px;
       height: 274px; }
   #calendar .calendar-body {
     display: flex;
     flex-direction: column;
-    width: 84%;
-    margin-right: 1.5%; }
+    width: 84%; }
     #calendar .calendar-body table,
     #calendar .calendar-body th,
     #calendar .calendar-body tr {
@@ -150,7 +145,10 @@ body {
       width: 14.285%; }
       #calendar .calendar-body th .date {
         position: absolute;
-        top: 0; }
+        left: 50%;
+        transform: translateX(-50%);
+        top: 0;
+        font-size: 13px; }
     #calendar .calendar-body tbody th p {
       padding: 0;
       margin: 0; }
@@ -200,7 +198,8 @@ body {
     left: 50%;
     margin: -260px 0 0 -450px;
     background: white;
-    z-index: 999; }
+    z-index: 999;
+    overflow: scroll; }
     #calendar .choose-trip h3 {
       margin-bottom: 20px; }
     #calendar .choose-trip .fa-times {
@@ -244,12 +243,12 @@ body {
   #calendar .slide-trips {
     display: flex;
     justify-content: center;
+    margin-left: 20px;
     flex-wrap: wrap;
     margin-bottom: 24px; }
     #calendar .slide-trips .slide {
-      position: relative;
-      width: 160px;
-      height: 120px;
+      width: 400px;
+      height: 280px;
       margin: 8px 6px;
       background: url("../images/gallery-1.jpg");
       background-repeat: no-repeat;
@@ -257,19 +256,20 @@ body {
     #calendar .slide-trips i {
       color: black;
       background: white;
-      height: 40px;
-      width: 40px;
+      height: 50px;
+      width: 50px;
       position: absolute;
       top: 50%;
       left: 50%;
-      margin: -20px 0 0 -20px;
+      margin: -25px 0 0 -25px;
       border-radius: 50%; }
       #calendar .slide-trips i::before {
         position: absolute;
         top: 12px;
-        right: 12px; }
+        right: 15px;
+        font-size: 25px; }
     #calendar .slide-trips .back-overplay {
-      background: rgba(245, 36, 36, 0.85);
+      background: rgba(0, 0, 0, 0.5);
       opacity: 0;
       height: 100%;
       width: 100%;
@@ -277,8 +277,206 @@ body {
       top: 0;
       transition: all 0.2s ease;
       z-index: 999; }
-      #calendar .slide-trips .back-overplay:hover {
+      #calendar .slide-trips .back-overplay:not(.nohover):hover {
         opacity: 1; }
+
+.event {
+  position: relative;
+  width: 94%;
+  margin: 2px 0;
+  height: 20%;
+  background-color: #dc3545;
+  border-radius: 5px;
+  color: #fff;
+  padding-left: 3px;
+  font-weight: 500; }
+
+.more {
+  position: relative;
+  width: 94%;
+  margin: 2px 0;
+  height: 20%;
+  border-radius: 5px;
+  background-color: #fff;
+  padding-left: 3px;
+  font-weight: 500; }
+
+.desc {
+  border: 1px black solid; }
+
+.tr-1 {
+  background: url(../../data/train-trip/trip-1/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.tr-2 {
+  background: url(../../data/train-trip/trip-2/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.tr-3 {
+  background: url(../../data/train-trip/trip-3/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.tr-4 {
+  background: url(../../data/train-trip/trip-4/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.tr-5 {
+  background: url(../../data/train-trip/trip-5/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.tr-6 {
+  background: url(../../data/train-trip/trip-6/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.tr-7 {
+  background: url(../../data/train-trip/trip-7/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.tr-8 {
+  background: url(../../data/train-trip/trip-8/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.spd-1 {
+  background: url(../../data/speed-hack-trip/trip-1/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.spd-2 {
+  background: url(../../data/speed-hack-trip/trip-2/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.road-1 {
+  background: url(../../data/no-road-trip/trip-1/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.road-2 {
+  background: url(../../data/no-road-trip/trip-2/trip.png) !important;
+  background-position: 20px 20px;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.road-3 {
+  background: url(../../data/no-road-trip/trip-3/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.road-4 {
+  background: url(../../data/no-road-trip/trip-4/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.ecs-1 {
+  background: url(../../data/try-escape-trip/trip-1/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.ecs-2 {
+  background: url(../../data/try-escape-trip/trip-2/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.ecs-3 {
+  background: url(../../data/try-escape-trip/trip-3/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.ecs-4 {
+  background: url(../../data/try-escape-trip/trip-4/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.savag-1 {
+  background: url(../../data/savage-trip/trip-1/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.savag-2 {
+  background: url(../../data/savage-trip/trip-2/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.savag-3 {
+  background: url(../../data/savage-trip/trip-3/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.savag-4 {
+  background: url(../../data/savage-trip/trip-4/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.savag-5 {
+  background: url(../../data/savage-trip/trip-5/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.chill-1 {
+  background: url(../../data/pussy-trip/trip-1/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.chill-2 {
+  background: url(../../data/pussy-trip/trip-2/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.chill-3 {
+  background: url(../../data/pussy-trip/trip-3/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.chill-4 {
+  background: url(../../data/pussy-trip/trip-4/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.chill-5 {
+  background: url(../../data/pussy-trip/trip-5/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
+
+.chill-6 {
+  background: url(../../data/pussy-trip/trip-6/trip.png) !important;
+  background-position: center;
+  background-size: contain !important;
+  background-repeat: no-repeat; }
 
 .navbar {
   -webkit-box-shadow: 0px 2px 40px 0px rgba(0, 0, 0, 0.33);
@@ -325,31 +523,31 @@ body {
   background-image: url("../images/sec-1.jpg");
   background-attachment: fixed;
   background-size: cover;
-  background-position: center 50px;
+  background-position: center 0;
   background-repeat: no-repeat; }
-  #home .info {
+  #home .header {
     font-family: "Open Sans", sans-serif;
     text-align: center;
     margin-top: 23%; }
-    #home .info h2 {
+    #home .header .header__headline {
       font-size: 42px;
       font-weight: 400;
       letter-spacing: 1.6px;
       color: white;
       margin-bottom: 30px; }
-    #home .info p {
+    #home .header .header__main-description {
       letter-spacing: 1px;
       color: #e2e2e2;
       margin-bottom: 40px; }
-    #home .info a {
+    #home .header .header__explore-link {
       font-size: 20px;
       color: white;
       background: #447044;
       padding-left: 24px;
       padding-right: 24px; }
-      #home .info a:hover {
+      #home .header .header__explore-link:hover {
         background: #63ac63; }
-      #home .info a:focus {
+      #home .header .header__explore-link:focus {
         box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5); }
 
 #stats {
@@ -481,7 +679,10 @@ footer {
 @media screen and (max-width: 1000px) {
   .container {
     max-width: 760px; } }
-@keyframes rotating {
+@media screen and (max-width: 1130px) {
+  #stats .canvas-cont {
+    width: 90%; } }
+@-webkit-keyframes rotating {
   from {
     -ms-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -494,12 +695,29 @@ footer {
     -webkit-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg); } }
-@-webkit-keyframes rotating {
+@-moz-keyframes rotating {
   from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
     -webkit-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg); }
   to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
     -o-transform: rotate(360deg);
     transform: rotate(360deg); } }
