--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -97,8 +97,7 @@ body {
 
 #calendar {
   position: relative;
-  min-height: 100vh !important;
-  padding-bottom: 60px; }
+  min-height: 100vh !important; }
   #calendar .small-calendar {
     display: flex;
     justify-content: center; }
@@ -123,13 +122,14 @@ body {
   #calendar .calendar-body {
     display: flex;
     flex-direction: column;
-    width: 84%; }
+    width: 84%;
+    margin-right: 20px; }
     #calendar .calendar-body table,
     #calendar .calendar-body th,
     #calendar .calendar-body tr {
       border: 1px solid #ddd; }
     #calendar .calendar-body table {
-      height: 88vh; }
+      height: 94vh; }
     #calendar .calendar-body thead tr {
       text-align: center; }
     #calendar .calendar-body tbody {
@@ -284,7 +284,6 @@ body {
   position: relative;
   width: 94%;
   margin: 2px 0;
-  height: 20%;
   background-color: #dc3545;
   border-radius: 5px;
   color: #fff;
