--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -123,7 +123,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 84%;
-    margin-right: 20px; }
+    margin-right: 50px; }
     #calendar .calendar-body table,
     #calendar .calendar-body th,
     #calendar .calendar-body tr {
@@ -294,8 +294,8 @@ body {
   position: relative;
   width: 94%;
   margin: 2px 0;
-  height: 20%;
   border-radius: 5px;
+  border: 2px black solid;
   background-color: #fff;
   padding-left: 3px;
   font-weight: 500; }
@@ -628,7 +628,8 @@ body {
       margin-bottom: 30px; }
     #trips-container .trip-item img {
       display: block;
-      width: 100%; }
+      width: 100%;
+      max-height: 300px; }
     #trips-container .trip-item .info-container {
       padding: 40px 30px;
       padding-top: 25px;
