--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,8 @@
 
 @import 'components/_trip-container';
 
+@import 'components/_fog';
+
 
 @import 'components/_overplay';
 @import 'components/_footer';
