--- a/src/assets/scss/components/_calendar.scss
+++ b/src/assets/scss/components/_calendar.scss
@@ -280,19 +280,22 @@
   background-color: #dc3545;
   border-radius: 5px;
   color: #fff;
-  padding-left: 3px;
+  padding-left: 7px;
   font-weight: 500;
 }
 
 .more {
-  position: relative;
+  position: absolute;
+  bottom: 3px;
   width: 94%;
   margin: 2px 0;
-  border-radius: 5px;
-  border: 2px black solid;
   background-color: #fff;
-  padding-left: 3px;
+  padding-left: 7px;
   font-weight: 500;
+
+  p {
+    font-weight: 900;
+  }
 }
 
 .desc {
