--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,6 +12,8 @@
 
 @import 'components/_fog';
 
+@import 'components/_error404';
+
 
 @import 'components/_overplay';
 @import 'components/_footer';
