add trips marker

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -705,141 +705,6 @@ html {
     transform: translate3d(0, 0, 0); }
   100% {
     transform: translate3d(-200vw, 0, 0); } }
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline; }
-
-html {
-  line-height: 1; }
-
-ol,
-ul {
-  list-style: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-caption,
-th,
-td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle; }
-
-q,
-blockquote {
-  quotes: none; }
-
-q:before,
-q:after,
-blockquote:before,
-blockquote:after {
-  content: "";
-  content: none; }
-
-a img {
-  border: none; }
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block; }
-
 .app {
   position: absolute;
   top: 0%;
@@ -1349,9 +1214,6 @@ summary {
 @keyframes rotate {
   100% {
     transform: rotate(360deg); } }
-body {
-  background-color: #27305e; }
-
 main {
   display: flex;
   justify-content: center;
@@ -1378,13 +1240,21 @@ main {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 36px; }
-
-h1,
-p {
-  margin: 0; }
-
-h1 {
-  font-size: 1.4em; }
+  .content h1,
+  .content p {
+    margin: 0; }
+  .content h1 {
+    font-size: 1.4em; }
+  .content a {
+    position: absolute;
+    margin-top: 95vh;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-family: Helvetica, sans-serif; }
+  .content .btn {
+    margin-top: 0;
+    bottom: 15px; }
 
 .gradient {
   align-self: center;
@@ -1463,18 +1333,6 @@ h1 {
   background-color: #101c50;
   align-self: center;
   transform: rotate(3deg); }
-
-a {
-  position: absolute;
-  margin-top: 95vh;
-  left: 50%;
-  transform: translateX(-50%);
-  color: white;
-  font-family: Helvetica, sans-serif; }
-
-.btn {
-  margin-top: 0;
-  bottom: 15px; }
 
 .overplay {
   position: fixed;
