--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'components/_trip-container';
 
 @import 'components/_fog';
+@import 'components/_map';
 
 @import 'components/_error404';
 
